[project]
name = "nerfstudio-reflect-sampling-nerf"
description = "reflect-sampling-nerf repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["reflect_sampling_nerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
reflect-sampling-nerf = 'reflect_sampling_nerf.reflect_sampling_nerf_config:reflect_sampling_nerf'
